# Innovators_Lab-

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  API_ENDPOINTS.md  API_STRUCTURE_ANALYSIS.md  ARCHITECTURE.md  COMPLETION_REPORT.md  COMPLETION_REPORT_TESTING_DOCKER.md  COMPLETION_STATUS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCKER_SETUP.md  FRONTEND_BACKEND_INTEGRATION_CHECKLIST.md  FRONTEND_INTEGRATION_REPORT.md  Makefile  README.md  TESTING_GUIDE.md  docker-compose.yml  init-db.sql  quick_start.bat  quick_start.sh  run_tests.bat  run_tests.sh
api-gateway/: .dockerignore  .env.example  Dockerfile  requirements.txt  wait-for-db.sh
api-gateway/apps/gateway/: tests.py  (+3 more)
api-gateway/config/: .gitignore  Cargo.toml  settings.py
api-gateway/config/src/: main.rs
backend/: .env  .env.example  .gitgnore  db.sqlite3  requirements.txt
backend/config/: settings.py  urls.py
frontend/: .dockerignore  .env.example  .gitignore  COMPLETION_REPORT.md  Dockerfile  FRONTEND_CHECKLIST.md  FRONTEND_USAGE.md  INTEGRATION_EXAMPLES.md  OPERATIONS_MAP.md  QUICK_START.md  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
services/rank-service/: .env.example
services/submission-service/: .env.example  Dockerfile  README.md  requirements.txt
services/task-service/: .env.example  Dockerfile  pytest.ini  wait-for-db.sh
services/tournament-service/: .env.example  Dockerfile  README.md  conftest.py
services/user-service/: .env.example  Dockerfile  conftest.py  requirements.txt
shared/: utils.py
(+182 files in other folders)
